[package]
name = "vsag-sqlite"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ron = "0.8"
rusqlite = { version="0.32", features = ["csvtab", "loadable_extension", "functions"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
vsag = {version = "0.1", default-features = false, features = ["enable-cxx11-abi"] }

[features]
default = ["vsag-vendored", "sqlite-vendored"]
vsag-vendored = ["vsag/vendored"]
sqlite-vendored = ["rusqlite/bundled"]
